# zabbix-auto-config

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  config.sample.ini  config.sample.toml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  zabbix.template.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yaml
example/host_modifiers/: host_tagger.py  mod.py
example/mapping_files/: macro_map.yaml  property_hostgroup_map.txt  property_macro_map.yaml  property_template_map.txt  siteadmin_hostgroup_map.txt
example/source_collectors/: hosts.json  jsonsource_basic.py  jsonsource_collectorconfig.py  mysource.py
tests/: conftest.py  fixtures.py  test_config.py  test_cron.py  test_db.py  test_errcount.py  test_failsafe.py  test_health.py  test_logging.py  test_macros.py  test_map_file.py  test_models.py  test_sourcecollectors.py  test_state.py  test_types.py  test_utils.py  test_version.py  utils.py
tests/data/: host_modifier_typed.py  host_modifier_untyped.py  source_collector_typed.py  source_collector_untyped.py
tests/test_processing/: test_sourcecollectorprocess.py  test_sourcemerger.py  test_zabbixupdater.py
za_hub/: __init__.py  processing.py  utils.py
zabbix_auto_config/: __init__.py  __main__.py  _types.py  compat.py  config.py  cron.py  db.py  dirs.py  errcount.py  exceptions.py  failsafe.py  health.py  log.py  macros.py  map_file.py  models.py  processing.py  sourcecollectors.py  state.py  test_cron.py  utils.py
zabbix_auto_config/cli/: __init__.py  _app.py  macros.py
zabbix_auto_config/pyzabbix/: client.py  compat.py  enums.py  types.py  utils.py
