[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabbix-auto-config"
dynamic = ["version"]
description = "Zabbix auto config - ZAC"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENSE"
keywords = []
authors = [{ name = "Paal Braathen", email = "paal.braathen@usit.uio.no" }]
maintainers = [{ name = "Peder Hovdan Andresen", email = "pederhan@uio.no" }]
classifiers = [
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "multiprocessing-logging==0.3.1",
    "psycopg2>=2.9.5",
    "pydantic>=2.6.0",
    "pyzabbix>=1.3.0",
    "requests>=1.0.0",
    "tomli>=2.0.0",
    "packaging>=23.2",
]

[project.optional-dependencies]
test = ["pytest>=7.4.3", "pytest-timeout>=2.2.0", "hypothesis>=6.62.1"]

[project.urls]
Source = "https://github.com/unioslo/zabbix-auto-config"

[project.scripts]
zac = "zabbix_auto_config:main"

[tool.hatch.version]
path = "zabbix_auto_config/__about__.py"

[tool.hatch.envs.default]
dependencies = ["zabbix-auto-config[test]"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/tests", "/path"]

[tool.hatch.build.targets.wheel]
packages = ["zabbix_auto_config"]

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[tool.ruff.lint.isort]
# Force one line per import to simplify diffing and merging
force-single-line = true
# Add annotations import to every file
required-imports = ["from __future__ import annotations"]
