[metadata]
name = zabbix-auto-config
version = 0.1.0
description = Zabbix auto config - ZAC
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/unioslo/zabbix-auto-config
author = University of Oslo, University Center for Information Technology
author_email = noreply@usit.uio.no
license = MIT
license_file = LICENSE
classifiers =
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
install_requires =
    multiprocessing-logging == 0.3.1
    psycopg2
    pydantic
    pyzabbix
    requests
    tomli
include_package_data = True
packages = find:

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    zac = zabbix_auto_config:main

[options.extras_require]
test =
    pytest
    hypothesis
